--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-}
-
-body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -167,56 +164,59 @@ body {
   background-image: url(../images/bg-intro-mobile.png), linear-gradient(#ff7a7a);
   color: #fff;
   font-family: 'Poppins', sans-serif;
-  font-size: 1.6rem;
-  font-weight: 400;
-  line-height: 1.7;
   text-align: center;
 }
 
 .main {
   max-width: 37.5rem;
-  padding: 0 3rem;
+  padding: 8.8rem 2.4rem 6.8rem;
   margin: auto;
 }
 
 .introduction {
-  margin: 8rem 0 6rem;
+  margin-bottom: 2.4rem;
 }
 
 .introduction__heading {
+  font-weight: 700;
   font-size: 2.8rem;
-  line-height: 1.4;
+  line-height: 3.6rem;
+  letter-spacing: -0.29px;
+  margin-bottom: 1.6rem;
 }
 
-.introduction__text {
-  margin-top: 3rem;
-  line-height: 1.7;
+.introduction__paragraph {
+  margin-bottom: 6.4rem;
+  line-height: 2.6rem;
+  font-size: 1.6rem;
+  font-weight: 500;
 }
 
-.contact__offer {
+.introduction__offer {
   background-color: #6055a5;
-  -webkit-box-shadow: 0 8px 1px rgba(172, 32, 13, 0.2);
-          box-shadow: 0 8px 1px rgba(172, 32, 13, 0.2);
-  padding: 2rem 0;
+  -webkit-box-shadow: 0px 8px 0px rgba(0, 0, 0, 0.14688);
+          box-shadow: 0px 8px 0px rgba(0, 0, 0, 0.14688);
+  padding: 1.8rem 6.6rem;
   border-radius: 1rem;
-  margin-bottom: 3rem;
+  letter-spacing: 0.27px;
 }
 
-.contact__text {
-  margin: auto;
-  width: 75%;
+.introduction__paragraph-offer {
+  font-weight: 400;
+  font-size: 1.5rem;
+  margin-bottom: 0;
 }
 
-.contact__text--bold {
+.introduction__text--bold {
   font-weight: 700;
 }
 
 .contact__form {
   background: #fff;
   border-radius: 1rem;
-  padding: 2rem 2.5rem;
-  -webkit-box-shadow: 0 8px 1px rgba(172, 32, 13, 0.2);
-          box-shadow: 0 8px 1px rgba(172, 32, 13, 0.2);
+  padding: 2.4rem;
+  -webkit-box-shadow: 0px 8px 0px rgba(0, 0, 0, 0.14688);
+          box-shadow: 0px 8px 0px rgba(0, 0, 0, 0.14688);
 }
 
 .contact__item {
@@ -230,16 +230,20 @@ body {
   width: 100%;
   color: #fff;
   text-transform: uppercase;
+  font-size: 1.5rem;
+  line-height: 2.6rem;
+  font-weight: 600;
   letter-spacing: 1px;
-  padding: 2rem 0;
-  -webkit-box-shadow: 0 4px 1px rgba(18, 139, 14, 0.74);
-          box-shadow: 0 4px 1px rgba(18, 139, 14, 0.74);
+  padding: 1.5rem 0;
+  -webkit-box-shadow: inset 0px -4px 0px rgba(0, 0, 0, 0.0908818);
+          box-shadow: inset 0px -4px 0px rgba(0, 0, 0, 0.0908818);
+  margin-bottom: 0.8rem;
 }
 
 .contact__error {
   position: absolute;
-  right: 20px;
-  top: 13px;
+  right: 22px;
+  top: 18px;
   display: none;
 }
 
@@ -254,9 +258,10 @@ body {
 
 .contact__TS {
   color: #b9b6d3;
-  margin-top: 1.5rem;
-  font-size: 1rem;
-  line-height: 1.8;
+  font-size: 1.1rem;
+  line-height: 2.1rem;
+  font-weight: 500;
+  padding: 0 2rem;
 }
 
 .contact__TS--accent {
@@ -272,16 +277,16 @@ body {
 }
 
 input {
-  line-height: 5rem;
+  line-height: 2.6rem;
+  letter-spacing: 0.25px;
   color: #3e3c49;
   width: 100%;
-  border: 1px solid #b9b6d3;
+  border: 1px solid #DEDEDE;
   border-radius: 5px;
   margin-bottom: 1.5rem;
-  padding-left: 2rem;
-  font-size: 1.3rem;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  padding: 1.5rem 0 1.5rem 1.9rem;
+  font-size: 1.4rem;
+  font-weight: 600;
 }
 
 input:focus {
@@ -312,16 +317,6 @@ input:focus {
 ::placeholder {
   font-size: 1.3rem;
   font-weight: 600;
-}
-
-.attribution {
-  font-size: 11px;
-  text-align: center;
-  margin-top: 4rem;
-}
-
-.attribution a {
-  color: #3e52a3;
 }
 
 @media screen and (min-width: 768px) {
