--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,55 +4,60 @@ body {
     background-image: url(../images/bg-intro-mobile.png), linear-gradient(hsl(0, 100%, 74%));
     color:$color-font-body-light;
     font-family: 'Poppins', sans-serif;
-    font-size: 1.6rem;
-    font-weight: 400;
-    line-height: 1.7;
     text-align: center;
 }
 
 .main {
     max-width: 37.5rem;
-    padding:0 3rem;
+    padding:8.8rem 2.4rem 6.8rem;
     margin:auto;
 }
 
 .introduction {
-    margin:8rem 0 6rem;
+
+    margin-bottom:2.4rem;
 
     &__heading {
+        font-weight: 700;
         font-size: 2.8rem;
-        line-height: 1.4;
+        line-height: 3.6rem;
+        letter-spacing: -0.29px;
+        margin-bottom:1.6rem;
     }
 
-    &__text {
-        margin-top:3rem;
-        line-height: 1.7;
+    &__paragraph {
+        margin-bottom:6.4rem;
+        line-height: 2.6rem;
+        font-size: 1.6rem;
+        font-weight: 500;
     }
-}
 
-.contact {
     &__offer {
         background-color: $background-offer;
-        box-shadow: 0 8px 1px rgba(172, 32, 13, 0.2);
-        padding:2rem 0;
+        box-shadow: 0px 8px 0px rgba(0, 0, 0, 0.14688);
+        padding:1.8rem 6.6rem;
         border-radius: 1rem;
-        margin-bottom: 3rem;
+        letter-spacing: 0.27px;
     }
 
-    &__text {
-        margin:auto;
-        width:75%;
+    &__paragraph-offer {
+        font-weight: 400;
+        font-size: 1.5rem;
+        margin-bottom: 0;
     }
 
     &__text--bold {
         font-weight: 700;
     }
+}
+
+.contact {
 
     &__form {
         background: $background-form;
         border-radius: 1rem;
-        padding:2rem 2.5rem;
-        box-shadow: 0 8px 1px rgba(172, 32, 13, 0.2);
+        padding:2.4rem;
+        box-shadow: 0px 8px 0px rgba(0, 0, 0, 0.14688);
     }
 
     &__item {
@@ -66,15 +71,19 @@ body {
         width:100%;
         color:$color-font-body-light;
         text-transform: uppercase;
+        font-size: 1.5rem;
+        line-height: 2.6rem;
+        font-weight: 600;
         letter-spacing: 1px;
-        padding:2rem 0;
-        box-shadow: 0 4px 1px rgba(18, 139, 14, 0.74);
+        padding:1.5rem 0;
+        box-shadow: inset 0px -4px 0px rgba(0, 0, 0, 0.0908818);
+        margin-bottom: 0.8rem;
     }
 
     &__error {
         position:absolute;
-        right:20px;
-        top:13px;
+        right:22px;
+        top:18px;
         display:none;
     }
 
@@ -89,9 +98,10 @@ body {
 
     &__TS {
         color:$color-font-form-light;
-        margin-top:1.5rem;
-        font-size:1rem;
-        line-height: 1.8;
+        font-size:1.1rem;
+        line-height: 2.1rem;
+        font-weight: 500;
+        padding: 0 2rem;
 
         &--accent {
             color:$color-font-form-accent;
@@ -108,15 +118,16 @@ body {
 }
 
 input {
-    line-height: 5rem;
+    line-height: 2.6rem;
+    letter-spacing: 0.25px;
     color:$Dark-Blue;
     width:100%;
-    border:1px solid $Grayish-Blue;
+    border:1px solid #DEDEDE;
     border-radius: 5px;
     margin-bottom: 1.5rem;
-    padding-left:2rem;
-    font-size:1.3rem;
-    box-sizing: border-box;
+    padding:1.5rem 0 1.5rem 1.9rem;
+    font-size:1.4rem;
+    font-weight: 600;
 }
 
 input:focus {
