--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,7 @@ body {
 
 .introduction {
 
-    margin-bottom:2.4rem;
+    margin-bottom:6.4rem;
 
     &__heading {
         font-weight: 700;
@@ -26,11 +26,13 @@ body {
     }
 
     &__paragraph {
-        margin-bottom:6.4rem;
         line-height: 2.6rem;
         font-size: 1.6rem;
         font-weight: 500;
     }
+}
+
+.contact {
 
     &__offer {
         background-color: $background-offer;
@@ -38,20 +40,18 @@ body {
         padding:1.8rem 6.6rem;
         border-radius: 1rem;
         letter-spacing: 0.27px;
+        margin-bottom:2.4rem;
     }
 
-    &__paragraph-offer {
+    &__paragraph {
         font-weight: 400;
         font-size: 1.5rem;
-        margin-bottom: 0;
+        line-height: 2.6rem;
     }
 
     &__text--bold {
         font-weight: 700;
     }
-}
-
-.contact {
 
     &__form {
         background: $background-form;
@@ -91,9 +91,11 @@ body {
         color:$color-font-error;
         text-align: right;
         margin-top:-10px;
-        margin-bottom:30px;
-        font-size:1.3rem;
+        margin-bottom:1.9rem;
+        font-size:1.1rem;
+        line-height: 1.65rem;
         font-style: italic;
+        font-weight: 500;
     }
 
     &__TS {
@@ -133,9 +135,12 @@ input {
 input:focus {
     border: none;
     border-radius: 5px;
-    box-shadow: 0 0 0 1px $Blue;
-    outline: none;
+    outline: 1px solid #5E54A4;
     transition: .1s;
+}
+
+.input-error-outline {
+    outline: 2px solid #FF7979;
 }
 
 ::placeholder {
@@ -147,27 +152,61 @@ input:focus {
 
     body {
         background:url(../images/bg-intro-desktop.png), linear-gradient(hsl(0, 100%, 74%));
+        display: flex;
+        min-height: 100vh;
     }
 
     .main {
         display:flex;
         align-items: center;
         justify-content: space-between;
-        max-width:120rem;
-        height:100vh;
+        max-width:110rem;
+        padding: 0 3.2rem;
+        margin: auto;
     }
 
     .introduction {
         text-align:left;
-        width:42%;
+        width:45%;
 
         &__heading {
-            font-size:4rem;
-            line-height:1.2;
+            font-size:5rem;
+            line-height:5.5rem;
+            letter-spacing: -0.52px;
+            margin-bottom: 3rem;
         }
     }
 
     .contact {
-        width:50%;
+        width:45%;
     }
+}
+
+@media screen and (min-width:1440px) {
+
+    .main {
+        padding: 0;
+        width: 110rem;
+    }
+
+    .introduction {
+        width: 52.5rem;
+    }
+
+    .contact {
+        width: 54rem;
+
+        &__form {
+            padding: 4rem;
+        }
+    }
+
+    input {
+        margin-bottom: 2rem;
+    }
+
+    button:hover {
+        cursor: pointer;
+    }
+
 }
