--- a/scss/style.scss
+++ b/scss/style.scss
@@ -61,6 +61,10 @@ body {
     }
 
     &__item {
+        margin-bottom: 1.6rem;
+    }
+
+    &__item {
         position:relative;
     }
 
@@ -80,22 +84,36 @@ body {
         margin-bottom: 0.8rem;
     }
 
-    &__error {
+    &__error-icon {
         position:absolute;
         right:22px;
         top:18px;
-        display:none;
+        animation: opacity 0.5s;
+        opacity: 0;
+    }
+
+    &__error-icon-visible {
+        animation: opacity 0.3s;
+        opacity: 1;
     }
 
     &__error-text {
         color:$color-font-error;
-        text-align: right;
-        margin-top:-10px;
-        margin-bottom:1.9rem;
+        text-align: right;        
         font-size:1.1rem;
-        line-height: 1.65rem;
+        line-height: 0;
         font-style: italic;
         font-weight: 500;
+        transition: height 5s;
+        height: 0;
+        overflow: hidden;
+    }
+
+    &__error-text-visible {
+        transition: height 0.5s, margin-top 0.1s;
+        line-height: 1.65rem;
+        margin-top:0.6rem;
+        height: 16.5px;
     }
 
     &__TS {
@@ -112,21 +130,15 @@ body {
     }
 }
 
-#email-error,
-#name-error,
-#surname-error,
-#password-error {
-    display:none;
-}
-
 input {
     line-height: 2.6rem;
     letter-spacing: 0.25px;
     color:$Dark-Blue;
     width:100%;
-    border:1px solid #DEDEDE;
+    border:none;
+    transition: outline 0.08s;
+    outline:1px solid #DEDEDE;
     border-radius: 5px;
-    margin-bottom: 1.5rem;
     padding:1.5rem 0 1.5rem 1.9rem;
     font-size:1.4rem;
     font-weight: 600;
@@ -140,6 +152,7 @@ input:focus {
 }
 
 .input-error-outline {
+    transition: outline 0.08s;
     outline: 2px solid #FF7979;
 }
 
