--- a/css/style.css
+++ b/css/style.css
@@ -266,8 +266,8 @@ body {
   line-height: 0;
   font-style: italic;
   font-weight: 500;
-  -webkit-transition: height 5s;
-  transition: height 5s;
+  -webkit-transition: height 0.5s;
+  transition: height 0.5s;
   height: 0;
   overflow: hidden;
 }
@@ -316,10 +316,11 @@ input:focus {
   transition: .1s;
 }
 
-.input-error-outline {
+.input-error {
   -webkit-transition: outline 0.08s;
   transition: outline 0.08s;
   outline: 2px solid #FF7979;
+  color: #FF7979;
 }
 
 ::-webkit-input-placeholder {
@@ -394,7 +395,7 @@ input:focus {
   .contact__form {
     padding: 4rem;
   }
-  input {
+  .contact__item {
     margin-bottom: 2rem;
   }
   button:hover {
